[package]
name = "container-health-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
color-print = "0.3.7"
redis = "0.32.2"
sqlite = "0.37.0"
# sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "chrono"] }
